fixed z-index menu issue

--- a/layouts/css/_large-nav-2.scss
+++ b/layouts/css/_large-nav-2.scss
@@ -11,7 +11,7 @@
 			background-color:white;
 			box-shadow:0 0 5px 2px rgba(0,0,0,0.33);
 			position:relative; /* Box shadow doesn't show without a z-index */
-			z-index:1;
+			z-index:200 !important;
 		}
 
 		#large-navigation-container-2 > div:first-child{
