--- a/layouts/css/site-theme/_breadcrumbs.scss
+++ b/layouts/css/site-theme/_breadcrumbs.scss
@@ -42,10 +42,6 @@
 	border-left-color:rgba(map-get($theme-colors, "primary"), 0.7);
 }
 
-#large-navigation-container-2{
-	z-index:10 !important;
-}
-
 .fancy-breadcrumb > a:first-of-type, .fancy-breadcrumb > div:first-of-type a{
 	padding-left:10px;
 }
